Masks broken on Multires #114841

Closed
opened 2023-11-14 15:11:48 +01:00 by Julien Kaspar · 1 comment
Member

System Information
Operating system: Linux-6.5.6-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.6-gentoo) AMD 4.6 (Core Profile) Mesa 23.2.1

Blender Version
Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-11-01 00:44, hash: f6c52849b502
Worked: 3.6.5

Caused by 4151691552

Short description of error
There are glitches that are likely to happen when entering sculpt mode on objects with Multires in 4.0.
This is also happening with the latest stable version.

AN example where this can happen is on the Human Base Meshes bundle on:
https://www.blender.org/download/demo-files/

image

This glitched pattern is different every time sculpt mode is entered.

Exact steps for others to reproduce the error

  • Download and extract the bundle
  • Open the .blend file
  • Enter sculpt mode on either the realistic hand or foot
  • Use A and Clear Mask to fix the issue (Could have more issues though. Not sure)
**System Information** Operating system: Linux-6.5.6-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.6-gentoo) AMD 4.6 (Core Profile) Mesa 23.2.1 **Blender Version** Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-11-01 00:44, hash: `f6c52849b502` Worked: 3.6.5 Caused by 4151691552 **Short description of error** There are glitches that are likely to happen when entering sculpt mode on objects with Multires in 4.0. This is also happening with the latest stable version. AN example where this can happen is on the Human Base Meshes bundle on: https://www.blender.org/download/demo-files/ ![image](/attachments/b5b4169c-8791-498b-914c-828ff31c2a34) This glitched pattern is different every time sculpt mode is entered. **Exact steps for others to reproduce the error** - Download and extract the bundle - Open the .blend file - Enter sculpt mode on either the realistic hand or foot - Use `A` and Clear Mask to fix the issue (Could have more issues though. Not sure)
152 KiB
Julien Kaspar added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-14 15:11:49 +01:00
Iliya Katushenock added the
Interest
Sculpt, Paint & Texture
Interest
Modeling
labels 2023-11-14 15:13:09 +01:00
Member

Can confirm, will check

Can confirm, will check
Hans Goudey self-assigned this 2023-11-14 16:06:50 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-11-14 16:06:55 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-14 16:28:58 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114841
No description provided.