Fix #114841: Sculpt Multires drawing broken with no mask

The GPU buffer type was replaced with `float` in 4151691552413785cc7a,
but the "no mask" case wasn't changed. We still assigned a `uchar` value
to a `float` pointer, which made the drawing look random. Instead do the
same fill we use for other PBVH types.

Pull Request: https://projects.blender.org/blender/blender/pulls/114846